# bible-reading-plan

./: .gitignore  CLAUDE.md  Justfile  README.md  compare_voices.py  podcast_config.yaml  pyproject.toml  readings.txt  setup.py
.github/workflows/: build-feed.yml
bible_reading_plan/: bible_books.py  esv_audio.py  import.py  importer.py  podcast_builder.py  readings.py
bible_reading_plan/cli/: importer.py  podcast_builder.py
bible_reading_plan/metadata/: bible_chapter_lengths.json
bible_reading_plan/metadata/episodes/: W01_D01.json  W01_D02.json  W01_D03.json  W01_D04.json  W01_D05.json  W02_D01.json  W02_D02.json  W02_D03.json  W02_D04.json  W02_D05.json  W03_D01.json  W03_D02.json  W03_D03.json  W03_D04.json  W03_D05.json  W04_D01.json  W04_D02.json  W04_D03.json  W04_D04.json  W04_D05.json  W05_D01.json  W05_D02.json  W05_D03.json  W05_D04.json  W05_D05.json  W06_D01.json  W06_D02.json  W06_D03.json  W06_D04.json  W06_D05.json  W07_D01.json  W07_D02.json  W07_D03.json  W07_D04.json  W07_D05.json  W08_D01.json  W08_D02.json  W08_D03.json  W08_D04.json  W08_D05.json  (+220 more)
bible_reading_plan/utils/: esv_audio.py  podcast_episode.py  podcast_segments.py  readings.py
scripts/: compare_voices.py
tests/: test_bible_books.py  test_podcast_episode.py  test_podcast_segments.py  test_readings.py
